Update team page

--- a/team.qmd
+++ b/team.qmd
@@ -3,6 +3,7 @@ title: "{{< bi people-fill >}} Team"
 format: 
   html:
     toc-depth: 4
+    css: assets/styles/team-styles.scss
 ---
 
 ## Principal Investigator
@@ -42,7 +43,7 @@ In January of 2012 I started with the [University of Hawaii -- Department of Nat
 My research focuses on improving natural resource and environmental management by integrating methods, approaches, and tools from economics, geography, natural science, decision science, and political science.
 In 2021, I was awarded a [Pew Marine Conservation Fellowship to build coastal ecosystem accounts for Hawaiʻi](https://www.pewtrusts.org/en/projects/marine-fellows/fellows-directory/2021/kirsten-ll-oleson).
 
-<center>
+<br><center>
 [{{< ai orcid size=LARGE >}}](https://orcid.org/0000-0002-7992-5051) 
 &nbsp;&nbsp;&nbsp;&nbsp;
 [{{< ai google-scholar size=LARGE >}}](https://scholar.google.com/citations?user=4pP2V9wAAAAJ&hl=en&oi=ao) 
@@ -50,6 +51,7 @@ In 2021, I was awarded a [Pew Marine Conservation Fellowship to build coastal ec
 [{{< ai researchgate size=LARGE >}}](https://www.researchgate.net/profile/Kirsten_Oleson)
 </center>
 
+::: {.current-and-alumni-h3-highlights}
 ## Current Lab Members
 
 ### Post-Doctoral Fellows
@@ -57,16 +59,15 @@ In 2021, I was awarded a [Pew Marine Conservation Fellowship to build coastal ec
 #### Ashley Lowe MacKenzie <br>
 
 ::: columns
-::: {.column width="40%"}
+::: {.columns}
+::: {.column #img}
 <center><img src="/assets/images/2023_ashley-lowe-mackenzie_headshot.png" width="90%" class="team-img" />
 </center>
 :::
-
-::: {.column width="60%"}
-<br>
+::: {.column #text}
 Ashley is an applied environmental economist specializing in the intersection of social and ecological systems, particularly in public lands and outdoor recreation. She received a PhD in Applied Economics from Oregon State University and joined the lab in June of 2023. Her research addresses emerging questions in outdoor recreation and public land management, including driving factors for demand, management strategies and various quantitative nonmarket valuation methods. Ashley's current lab project is focusing on valuing the impacts of ocean acidification on coral reefs through ecosystem provision of recreation and tourism.
 
-<center>
+<br><center>
 [{{< fa solid id-card size=LARGE >}}](https://loweas.github.io/)
 &nbsp;&nbsp;&nbsp;&nbsp;
 [{{< fa brands linkedin size=LARGE >}}](https://www.linkedin.com/in/ashley-l-40041a1b2/) 
@@ -79,15 +80,20 @@ Ashley is an applied environmental economist specializing in the intersection of
 </center>
 :::
 :::
+:::
 
-#### Lansing Perng
+::: {.divder}
+· · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · ·
+:::
+
+#### Lansing Perng <br>
 
 ::: columns
-::: {.column width="60%"}
-<br><br>
+::: {.columns}
+::: {.column #text}
 *Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lacinia odio vitae vestibulum vestibulum. Cras vehicula, mi eget laoreet varius, libero justo cursus odio, nec dictum libero justo sit amet elit. Integer nec odio nec nisi cursus tincidunt. Sed ac felis ac nulla fermentum tincidunt. Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Nulla porttitor accumsan tincidunt.*
 
-<center>
+<br><center>
 [{{< fa solid id-card size=LARGE >}}](https://lansingyperng.wixsite.com/home)
 &nbsp;&nbsp;&nbsp;&nbsp;
 [{{< fa brands linkedin size=LARGE >}}](https://www.linkedin.com/in/lansing-perng-5944348b/)
@@ -95,10 +101,10 @@ Ashley is an applied environmental economist specializing in the intersection of
 [{{< fa brands github size=LARGE >}}](https://github.com/lyperng)
 </center>
 :::
-::: {.column width="40%"}
-<center>
-<img src="/assets/images/placeholder-image.png" width="90%" class="team-img" /><br><br>
+::: {.column #img-right}
+<center><img src="/assets/images/placeholder-image.png" width="90%" class="team-img" />
 </center>
+:::
 :::
 :::
 
@@ -107,27 +113,32 @@ Ashley is an applied environmental economist specializing in the intersection of
 #### Elanur Ural <br>
 
 ::: columns
-::: {.column width="40%"}
+::: {.columns}
+::: {.column #img}
 <center><img src="/assets/images/2023_ela-ural_headshot.png" width="90%" class="team-img" /></center>
 :::
-::: {.column width="60%"}
-<br><br><br>
+::: {.column #text}
 Ela is a PhD student out of the Department of Economics at University of Hawai'i at Mānoa. Her research primarily focuses on agriculture and natural resources, with particular interest in the role of social institutions. She works under the Oleson Lab's coastal ecosystem accounting team on the valuation of fisheries for the main Hawaiian islands.
 
-<center>
+<br><center>
 [{{< fa brands linkedin size=LARGE >}}](https://www.linkedin.com/in/elanur-ural/) 
 </center>
 :::
+:::
+:::
+
+::: {.divder}
+· · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · ·
 :::
 
 #### Louis Chua <br>
 
 ::: columns
-::: {.column width="60%"}
-<br><br><br>
+::: {.columns}
+::: {.column #text}
 Louis is a PhD Candidate in the Department of Natural Resources and Environmental Management (NREM) at University of Hawai'i at Mānoa. He is currently working on Natural Capital Accounting (NCA) and ecosystem valuation projects across the Main Hawaiian Islands.
 
-<center>
+<br><center>
 [{{< fa solid id-card size=LARGE >}}](https://showandgo.github.io/LouisC/)
 &nbsp;&nbsp;&nbsp;&nbsp;
 [{{< fa brands linkedin size=LARGE >}}](https://www.linkedin.com/in/chualouis/) 
@@ -137,27 +148,33 @@ Louis is a PhD Candidate in the Department of Natural Resources and Environmenta
 [{{< ai researchgate size=LARGE >}}](https://www.researchgate.net/profile/Kirsten_Oleson)
 </center>
 :::
-::: {.column width="40%"}
+::: {.column #img-right}
 <center><img src="/assets/images/2023_louis-chua_heashot.png" width="90%" class="team-img" /></center>
 :::
+:::
+:::
+
+::: {.divder}
+· · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · ·
 :::
 
 #### Sydney Campbell <br>
 
 ::: columns
-::: {.column width="40%"}
+::: {.columns}
+::: {.column #img}
 <center>
-<img src="/assets/images/2024_sydney-campbell_headshot.jpg" width="90%" class="team-img" /><br><br>
+<img src="/assets/images/2024_sydney-campbell_headshot.jpg" width="90%" class="team-img" />
 </center>
 :::
 
-::: {.column width="60%"}
-<br><br>
+::: {.column #text}
 *Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lacinia odio vitae vestibulum vestibulum. Cras vehicula, mi eget laoreet varius, libero justo cursus odio, nec dictum libero justo sit amet elit. Integer nec odio nec nisi cursus tincidunt. Sed ac felis ac nulla fermentum tincidunt. Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Nulla porttitor accumsan tincidunt.*
 
-<center>
+<br><center>
 [{{< fa brands linkedin size=LARGE >}}](https://www.linkedin.com/in/sydney-campbell-b4428419b/)
 </center>
+:::
 :::
 :::
 
@@ -166,18 +183,19 @@ Louis is a PhD Candidate in the Department of Natural Resources and Environmenta
 #### Ann Nyambega <br>
 
 ::: columns
-::: {.column width="60%"}
-<br>
+::: {.columns}
+::: {.column #text}
 Ann, an MS student, specializes in employing Theory of Change methodology for conducting localized monitoring and evaluation of Ecosystem-based Adaptation projects in Hawaii. Holding a bachelor's degree in Environmental Planning and Management, she brings a wealth of experience in facilitating the implementation of climate adaptation projects in the Kenyan context. Ann's research underscores her commitment to advancing and enhancing sustainable localized solutions and enhancing resilience within the socio-ecological landscape.
 
-<center>
+<br><center>
 [{{< fa brands linkedin size=LARGE >}}](https://www.linkedin.com/in/ann-nyambega-813530166/) 
 </center>
 :::
-::: {.column width="40%"}
+::: {.column #img-right}
 <center>
-<img src="/assets/images/2023_ann-nyambega_headshot.png" width="90%" class="team-img" /><br><br>
+<img src="/assets/images/2023_ann-nyambega_headshot.png" width="90%" class="team-img" />
 </center>
+:::
 :::
 :::
 
@@ -186,136 +204,157 @@ Ann, an MS student, specializes in employing Theory of Change methodology for co
 #### Marion Graftieaux <br>
 
 ::: columns
-::: {.column width="40%"}
-<center>
-<img src="/assets/images/2024_marion-graftieaux_headshot.jpg" width="90%" class="team-img" /><br><br>
+::: {.columns}
+::: {.column #img}
+<br><center>
+<img src="/assets/images/2024_marion-graftieaux_headshot.jpg" width="90%" class="team-img" />
 </center>
 :::
 
-::: {.column width="60%"}
-<br><br>
+::: {.column #text}
 *Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lacinia odio vitae vestibulum vestibulum. Cras vehicula, mi eget laoreet varius, libero justo cursus odio, nec dictum libero justo sit amet elit. Integer nec odio nec nisi cursus tincidunt. Sed ac felis ac nulla fermentum tincidunt. Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Nulla porttitor accumsan tincidunt.*
 
-<center>
+<br><center>
 [{{< fa brands linkedin size=LARGE >}}](https://www.linkedin.com/in/marion-graftieaux-335b85216/) 
 </center>
+:::
 :::
 :::
 
 ### Master's of Environmental Management Students
 
-#### Kayla Hodges
+#### Kayla Hodges <br>
 
 ::: columns
-::: {.column width="60%"}
-<br><br><br>
+::: {.columns}
+::: {.column #text}
 *Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lacinia odio vitae vestibulum vestibulum. Cras vehicula, mi eget laoreet varius, libero justo cursus odio, nec dictum libero justo sit amet elit. Integer nec odio nec nisi cursus tincidunt. Sed ac felis ac nulla fermentum tincidunt. Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Nulla porttitor accumsan tincidunt.*
 
-<center>
+<br><center>
 [{{< fa solid id-card size=LARGE >}}](https://acaptainslog.com/)
 &nbsp;&nbsp;&nbsp;&nbsp;
 [{{< fa brands linkedin size=LARGE >}}](https://www.linkedin.com/in/kaptainkayla/)
 </center>
 :::
-::: {.column width="40%"}
-<br><center><img src="/assets/images/2024_kayla-hodges_headshot.jpg" width="90%" class="team-img" /><br><br>
+::: {.column #img-right}
+<center><img src="/assets/images/2024_kayla-hodges_headshot.jpg" width="90%" class="team-img" />
 </center>
 :::
 :::
+:::
 
-#### Ruivaldo Freitas Viana
+::: {.divder}
+· · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · ·
+:::
+
+#### Ruivaldo Freitas Viana <br>
 
 ::: columns
-::: {.column width="40%"}
-<br><center>
-<img src="/assets/images/2024_ruivaldo-viana_headshot.png" width="90%" class="team-img" /><br><br>
+::: {.columns}
+::: {.column #img}
+<center>
+<img src="/assets/images/2024_ruivaldo-viana_headshot.png" width="90%" class="team-img" />
 </center>
 :::
 
-::: {.column width="60%"}
-<br><br>
+::: {.column #text}
 Ruivaldo Freitas Viana graduated with a Bachelor of Arts degree in Economics and a minor in Visual Communication from Luther College. Recently, he worked as a Research Associate for the Center for Behavior and the Environment at the nonprofit organization Rare. There, he supported primary and secondary research on the intersection of behavioral science, climate change, and entertainment media. He is passionate about exploring multifaceted solutions that balance economic development and ecological conservation in island nations.
 
-<center>
+<br><center>
 [{{< fa brands linkedin size=LARGE >}}](https://www.linkedin.com/in/ruivaldo-viana/)
 </center>
 :::
 :::
+:::
 
-#### Zoe Sidana Bunnath
+::: {.divder}
+· · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · ·
+:::
+
+#### Zoe Sidana Bunnath <br>
 
 ::: columns
-::: {.column width="60%"}
-<br>
+::: {.columns}
+::: {.column #text}
 Zoe Sidana Bunnath graduated from the Royal University of Phnom Penh with a Bachelor of Development Studies in Natural Resource Management and Development and a Bachelor of English for Professional Communication. Zoe had worked as a Research Assistant at the Cambodia Development Resource Institute, involved in multiple projects on climate change, renewable energy, and natural resources governance at the Center for Natural Resources and Environment. Additionally, she has prior experience in the conservation field, having led a BirdLife International-Young Conservation Leader's project to support Sarus Crane conservation at Boeung Perk Lapouv and Anlung Pring Protected Landscapes. Passionate about lifelong learning and sustainable development, she envisions a world where environmental sustainability and economic development coexist harmoniously.
 
-<center>
+<br><center>
 [{{< fa brands linkedin size=LARGE >}}](https://www.linkedin.com/in/zoe-sidana-bunnath/?originalSubdomain=kh)
 </center>
 :::
-::: {.column width="40%"}
-<br><center>
-<img src="/assets/images/2024_zoe-sidana-bunnath_headshot.png" width="90%" class="team-img" /><br><br>
+::: {.column #img-right}
+<center>
+<img src="/assets/images/2024_zoe-sidana-bunnath_headshot.png" width="90%" class="team-img" />
 </center>
 :::
 :::
+:::
 
-### Undergraduate Students
+<!-- ### Undergraduate Students -->
 
 ### Research Assistants
 
 #### Kate Crowell <br>
 
 ::: columns
-::: {.column width="40%"}
+::: {.columns}
+::: {.column #img}
 <center>
-<img src="/assets/images/2023_kate-crowell_headshot.png" width="90%" class="team-img" /><br><br>
+<img src="/assets/images/2023_kate-crowell_headshot.png" width="90%" class="team-img" />
 </center>
 :::
-::: {.column width="60%"}
-<br>
+::: {.column #text}
+
 Kate is a research assistant in the Oleson Ecological Economics Lab, working on starting a Donut Economics Action Lab, in addition to continuing collaborative research on the Genuine Progress Indicator with the state.
 She joined the lab in Spring 2021, where she started as an undergraduate research assistant. Kate recently graduated from the University of Hawaiʻi at Mānoa with a B.S. in Natural Resources and Environmental Management (NREM) and B.A. in Political Science, and is expanding on her previous research in the lab post-grad.
 
-<center>
+<br><center>
 [{{< fa brands linkedin size=LARGE >}}](https://www.linkedin.com/in/kate-crowell-2634ba144/)
 </center>
 :::
 :::
+:::
 
-#### Whitney Goodell
+::: {.divder}
+· · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · ·
+:::
+
+#### Whitney Goodell <br>
 
 ::: columns
-::: {.column width="60%"}
-<br><br><br>
+::: {.columns}
+::: {.column #text}
+
 *Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lacinia odio vitae vestibulum vestibulum. Cras vehicula, mi eget laoreet varius, libero justo cursus odio, nec dictum libero justo sit amet elit. Integer nec odio nec nisi cursus tincidunt. Sed ac felis ac nulla fermentum tincidunt. Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Nulla porttitor accumsan tincidunt.*
 
-<center>
+<br><center>
 [{{< fa brands linkedin size=LARGE >}}](https://www.linkedin.com/in/whitney-goodell-26abb62a2/)
 &nbsp;&nbsp;&nbsp;&nbsp;
 [{{< ai researchgate size=LARGE >}}](https://www.researchgate.net/profile/Whitney-Goodell)
 </center>
 :::
-::: {.column width="40%"}
-<br><center><img src="/assets/images/2024_whitney-goodell_headshot.jpeg" width="90%" class="team-img" /><br><br>
+::: {.column #img-right}
+<center><img src="/assets/images/2024_whitney-goodell_headshot.jpeg" width="90%" class="team-img" />
 </center>
 :::
 :::
+::: 
 
 ### Data Coordinator
 
 #### Alemarie Ceria <br>
 
 ::: columns
-::: {.column width="40%"}
+::: {.columns}
+::: {.column #img}
 <center>
-<img src="/assets/images/2023_alemarie-ceria_headshot.png" width="90%" class="team-img" /><br><br>
+<img src="/assets/images/2023_alemarie-ceria_headshot.png" width="90%" class="team-img" />
 </center>
 :::
-::: {.column width="60%"}
+::: {.column #text}
 Alemarie has a B.A. in Economics from the University of Hawaii at Manoa. With nearly three years of experience in the lab, she actively engages in data management, collection, and analysis across multiple projects. She also develops visualizations for reports, presentations, and papers, ensuring research reproducibility. Alemarie co-authored two publications: ["Detecting Religion from Space: Nyepi Day in Bali"](https://www.sciencedirect.com/science/article/abs/pii/S2352938521001440?via%3Dihub) in *Remote Sensing Applications: Society and Environment* (2021) and "[Exploring the influence of activity participation on the economic value of nature-based recreation in the Sierra Nevada](https://www.sciencedirect.com/science/article/pii/S0301479724010673?via%3Dihub)" in *Journal of Environmental Management* (2024).
 
-<center>
+<br><center>
 [{{< fa brands linkedin size=LARGE >}}](https://www.linkedin.com/in/alemarieceria/) 
 &nbsp;&nbsp;&nbsp;&nbsp;
 [{{< fa brands github size=LARGE >}}](https://github.com/alemarieceria)
@@ -324,6 +363,7 @@ Alemarie has a B.A. in Economics from the University of Hawaii at Manoa. With ne
 &nbsp;&nbsp;&nbsp;&nbsp;
 [{{< ai researchgate size=LARGE >}}](https://www.researchgate.net/profile/Alemarie-Ceria)
 </center>
+:::
 :::
 :::
 
@@ -468,3 +508,4 @@ Anne-Charlotte now works as a project coordinator with the Green Municipal Fund 
 #### Derek Ford (2018-2019, 2021)
 
 Derek, a Geography graduate student, was the lab GIS guru.
+:::
