--- a/team.qmd
+++ b/team.qmd
@@ -51,10 +51,11 @@ In 2021, I was awarded a [Pew Marine Conservation Fellowship to build coastal ec
 [{{< ai researchgate size=LARGE >}}](https://www.researchgate.net/profile/Kirsten_Oleson)
 </center>
 
-::: {.current-and-alumni-h3-highlights}
 ## Current Lab Members
 
+::: {.highlights}
 ### Post-Doctoral Fellows
+::: 
 
 #### Ashley Lowe MacKenzie <br>
 
@@ -108,7 +109,9 @@ Ashley is an applied environmental economist specializing in the intersection of
 :::
 :::
 
+::: {.highlights}
 ### PhD Students
+:::
 
 #### Elanur Ural <br>
 
@@ -178,7 +181,9 @@ Louis is a PhD Candidate in the Department of Natural Resources and Environmenta
 :::
 :::
 
+::: {.highlights}
 ### Master's of Science Students
+:::
 
 #### Ann Nyambega <br>
 
@@ -199,7 +204,9 @@ Ann, an MS student, specializes in employing Theory of Change methodology for co
 :::
 :::
 
+::: {.highlights}
 ### Master's of Science Visiting Intern
+:::
 
 #### Marion Graftieaux <br>
 
@@ -221,7 +228,9 @@ Ann, an MS student, specializes in employing Theory of Change methodology for co
 :::
 :::
 
+::: {.highlights}
 ### Master's of Environmental Management Students
+:::
 
 #### Kayla Hodges <br>
 
@@ -292,7 +301,9 @@ Zoe Sidana Bunnath graduated from the Royal University of Phnom Penh with a Bach
 
 <!-- ### Undergraduate Students -->
 
+::: {.highlights}
 ### Research Assistants
+:::
 
 #### Kate Crowell <br>
 
@@ -340,7 +351,9 @@ She joined the lab in Spring 2021, where she started as an undergraduate researc
 :::
 ::: 
 
+::: {.highlights}
 ### Data Coordinator
+:::
 
 #### Alemarie Ceria <br>
 
@@ -369,7 +382,9 @@ Alemarie has a B.A. in Economics from the University of Hawaii at Manoa. With ne
 
 ## Alumni
 
+::: {.highlights}
 ### Post-doctoral Fellows
+:::
 
 #### Leah Bremer (2012)
 
@@ -390,7 +405,9 @@ She now works for the government of West Australia.
 
 #### Anders Dugstad (2023-2024)
 
+::: {.highlights}
 ### PhD Students
+:::
 
 #### Hla Htun (2018)
 
@@ -438,7 +455,9 @@ Rachael focused on applying principles from Structured Decision Making to commun
 
 Lysbeth's MSc thesis project focused on the biogoechemical dynamics that influence aquaculture productivity of Hawaiian fishpond, and how future management can incorporate the impact of climate change.
 
+::: {.highlights}
 ### Master's of Environmental Management Students
+:::
 
 #### Marcus Peng (2014)
 
@@ -471,14 +490,18 @@ Kate went on to be a Grau Fellow with the University of Hawaiʻi Sea Grant Colle
 Courtney helped create programs for invasive algae removal and monitoring in Paiko Lagoon State Wildlife Sanctuary for Division of Forestry and Wildlife.
 She got a job post-graduation with Kahoʻolawe Island Restoration Council as a coastal specialist.
 
+::: {.highlights}
 ### Undergraduate Students
+:::
 
 #### Lukanicole Zavas (2017)
 
 Luka conducted independent research with the Oleson lab on the state's Genuine Progress Indicator, winning a university-wide award.
 After graduation, she got a job in restoration in Waimea Valley, Oʻahu, and continued as a graduate student in NREM in the wildlife ecology lab.
 
+::: {.highlights}
 ### Research Assistants
+:::
 
 #### Michele Barnes (2015)
 
@@ -508,4 +531,3 @@ Anne-Charlotte now works as a project coordinator with the Green Municipal Fund 
 #### Derek Ford (2018-2019, 2021)
 
 Derek, a Geography graduate student, was the lab GIS guru.
-:::
