--- a/team.qmd
+++ b/team.qmd
@@ -2,7 +2,7 @@
 title: "{{< bi people-fill >}} Team"
 format: 
   html:
-    toc-depth: 4
+    toc-depth: 3
     css: assets/styles/team-styles.css
 ---
 
@@ -14,36 +14,15 @@ format:
   <img src="/assets/images/2023_kirsten-oleson_headshot.png" width="45%" class="team-img" />
 </center><br>
 
-I am an ecological economist.
-This "discipline" is actually an amalgam of many disciplines and schools of thought: economics, ethics, sociology, and environmental science, among many others.
-I use the power of economics to help address environmental policy problems.
-But, I recognize that economics is rife with implicit ethical assumptions and implications, such as whose values count and how much.
-Further, an economic worldview oftentimes doesn't adequately capture knowledge from environmental science or indigenous worldviews.
+I am an interdisciplinary sustainability scientist. My overarching goal is to ensure that the value of nature is captured in national, state, and community decision-making. I employ tools from economics, social science, ecology, and decision analysis to provide rigorous foundations for discussions of what trade-offs societies are willing to make in the name of increasing short-term economic productivity. I engage with national and state policy makers and local communities over a wide range of resource management, economic development, and conservation issues that are of direct and urgent relevance to the state of Hawaiʻi and other Pacific Islands, such as food security, climate adaptation, and sustainable economic growth. I teach the graduate core courses, as well as a graduate policy analysis class.
 
-I became interested in environmental policy, and the role of economics in decision-making, working as an impact assessment specialist at the World Bank.
-Between 1998 and 2003, I specialized in quantifying environmental and social impacts of development projects, and ensuring these impacts were then adequately addressed in management plans.
-Many times "economic" considerations trumped "environmental and social" concerns.
-I put these all in quotes, because "environmental and social" would be incorporated in "economic" if we had the right valuation tools.
-I grew frustrated with the schism between what I know was valuable and what we could value in economic analysis.
-And therein lies the motivation for my research program...
-
-My dissertation focused on national sustainability accounts.
-These accounts are a better reflection of national wealth and growth than traditional economic measures, such as GDP.
-I had the honor to work with a superstar team, including Kenneth Arrow (Nobel Laureate), Sir Partha Dasgupta, Lawrence Goulder, and Kevin Mumford, to further improve an economic sustainability indicator originally developed by Kirk Hamilton and his team at the World Bank.
-My ongoing research in this area aims to better measure and incorporate nature's goods and services.
-
-After completing my dissertation in 2007, I was a Teaching Fellow with Stanford University's new Public Policy Program.
-I co-directed the policy analysis capstone class (with Mary Sprague), led a seminar on applying competing conceptions of justice to public policy (with Josh Cohen), and co-taught a course on collective action (with Debra Satz).
-I founded an environmental ethics working group, and led a Humanities Center workshop on environmental norms, institutions, and policy.
-
-In 2010, I embarked on an NSF-funded post-doc to Madagascar.
-There, I studied the impacts of fisheries management, the economic value of coastal ecosystem services, conditions conducive to community management, and climate change adaptation, among others.
-
-In January of 2012 I started with the [University of Hawaii -- Department of Natural Resources and Environmental Management](https://www.ctahr.hawaii.edu/nrem/).
-My research focuses on improving natural resource and environmental management by integrating methods, approaches, and tools from economics, geography, natural science, decision science, and political science.
-In 2021, I was awarded a [Pew Marine Conservation Fellowship to build coastal ecosystem accounts for Hawaiʻi](https://www.pewtrusts.org/en/projects/marine-fellows/fellows-directory/2021/kirsten-ll-oleson).
+I serve on numerous advisory committees, including for the United Nations Global Coral Reef Fund, The United Nations System of Environmental and Economic Accounts Ocean Accounts working group, the Global Ocean Accounting Partnership, the Hawaiʻi Division of Aquatic Resources Holomua, and Blue Forests. I was confirmed to the City and County of Honolulu Climate Change Commission in 2024. In 2021, I was awarded a Pew Marine Conservation Fellowship.
 
 <br><center>
+[{{< ai cv size=LARGE >}}](assets/cv/2023_11_Oleson CV_Short.pdf)
+&nbsp;&nbsp;&nbsp;&nbsp;
+[{{< fa brands linkedin size=LARGE >}}](https://www.linkedin.com/in/kirsten-oleson-4b1134/) 
+&nbsp;&nbsp;&nbsp;&nbsp;
 [{{< ai orcid size=LARGE >}}](https://orcid.org/0000-0002-7992-5051) 
 &nbsp;&nbsp;&nbsp;&nbsp;
 [{{< ai google-scholar size=LARGE >}}](https://scholar.google.com/citations?user=4pP2V9wAAAAJ&hl=en&oi=ao) 
@@ -54,7 +33,7 @@ In 2021, I was awarded a [Pew Marine Conservation Fellowship to build coastal ec
 ## Current Lab Members
 
 ::: {.highlights}
-### Post-Doctoral Fellows
+### Collaborators
 ::: 
 
 #### Ashley Lowe MacKenzie <br>
@@ -62,7 +41,7 @@ In 2021, I was awarded a [Pew Marine Conservation Fellowship to build coastal ec
 ::: columns
 ::: {.columns}
 ::: {.column #img}
-<center><img src="/assets/images/2023_ashley-lowe-mackenzie_headshot.png" width="90%" class="team-img" />
+<center><img src="/assets/images/2025_ashley-lowe-mackenzie_headshot.png" width="90%" class="team-img" />
 </center>
 :::
 ::: {.column #text}
@@ -83,14 +62,16 @@ Ashley is an applied environmental economist specializing in the intersection of
 :::
 :::
 
-<div class="divider"></div>
+::: {.highlights}
+### Post-Doctoral Fellows
+::: 
 
 #### Lansing Perng <br>
 
 ::: columns
 ::: {.columns}
 ::: {.column #text}
-*Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lacinia odio vitae vestibulum vestibulum. Cras vehicula, mi eget laoreet varius, libero justo cursus odio, nec dictum libero justo sit amet elit. Integer nec odio nec nisi cursus tincidunt. Sed ac felis ac nulla fermentum tincidunt. Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Nulla porttitor accumsan tincidunt.*
+Lansing is a postdoctoral fellow specializing in modeling social-ecological systems. She received her PhD in Natural Resources and Environmental Management from the University of Hawaiʻi at Mānoa in May of 2024. She is currently working on assessing social vulnerability to ocean acidification in the main Hawaiian Islands by projecting climate change impacts on nearshore ecosystems and fisheries.
 
 <br><center>
 [{{< fa solid id-card size=LARGE >}}](https://lansingyperng.wixsite.com/home)
@@ -101,7 +82,7 @@ Ashley is an applied environmental economist specializing in the intersection of
 </center>
 :::
 ::: {.column #img-right}
-<center><img src="/assets/images/placeholder-image.png" width="90%" class="team-img" />
+<center><img src="/assets/images/2024_lansing-perng_headshot.png" width="90%" class="team-img" />
 </center>
 :::
 :::
@@ -110,25 +91,6 @@ Ashley is an applied environmental economist specializing in the intersection of
 ::: {.highlights}
 ### PhD Students
 :::
-
-#### Elanur Ural <br>
-
-::: columns
-::: {.columns}
-::: {.column #img}
-<center><img src="/assets/images/2023_ela-ural_headshot.png" width="90%" class="team-img" /></center>
-:::
-::: {.column #text}
-Ela is a PhD student out of the Department of Economics at University of Hawai'i at Mānoa. Her research primarily focuses on agriculture and natural resources, with particular interest in the role of social institutions. She works under the Oleson Lab's coastal ecosystem accounting team on the valuation of fisheries for the main Hawaiian islands.
-
-<br><center>
-[{{< fa brands linkedin size=LARGE >}}](https://www.linkedin.com/in/elanur-ural/) 
-</center>
-:::
-:::
-:::
-
-<div class="divider"></div>
 
 #### Louis Chua <br>
 
@@ -149,28 +111,6 @@ Louis is a PhD Candidate in the Department of Natural Resources and Environmenta
 :::
 ::: {.column #img-right}
 <center><img src="/assets/images/2023_louis-chua_heashot.png" width="90%" class="team-img" /></center>
-:::
-:::
-:::
-
-<div class="divider"></div>
-
-#### Sydney Campbell <br>
-
-::: columns
-::: {.columns}
-::: {.column #img}
-<center>
-<img src="/assets/images/2024_sydney-campbell_headshot.jpg" width="90%" class="team-img" />
-</center>
-:::
-
-::: {.column #text}
-*Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lacinia odio vitae vestibulum vestibulum. Cras vehicula, mi eget laoreet varius, libero justo cursus odio, nec dictum libero justo sit amet elit. Integer nec odio nec nisi cursus tincidunt. Sed ac felis ac nulla fermentum tincidunt. Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Nulla porttitor accumsan tincidunt.*
-
-<br><center>
-[{{< fa brands linkedin size=LARGE >}}](https://www.linkedin.com/in/sydney-campbell-b4428419b/)
-</center>
 :::
 :::
 :::
@@ -199,27 +139,7 @@ Ann, an MS student, specializes in employing Theory of Change methodology for co
 :::
 
 ::: {.highlights}
-### Master's of Science Visiting Intern
-:::
-
-#### Marion Graftieaux <br>
-
-::: columns
-::: {.columns}
-::: {.column #img}
-<br><center>
-<img src="/assets/images/2024_marion-graftieaux_headshot.jpg" width="90%" class="team-img" />
-</center>
-:::
-
-::: {.column #text}
-*Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lacinia odio vitae vestibulum vestibulum. Cras vehicula, mi eget laoreet varius, libero justo cursus odio, nec dictum libero justo sit amet elit. Integer nec odio nec nisi cursus tincidunt. Sed ac felis ac nulla fermentum tincidunt. Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Nulla porttitor accumsan tincidunt.*
-
-<br><center>
-[{{< fa brands linkedin size=LARGE >}}](https://www.linkedin.com/in/marion-graftieaux-335b85216/) 
-</center>
-:::
-:::
+### Visiting Scholars/Interns
 :::
 
 ::: {.highlights}
@@ -231,16 +151,14 @@ Ann, an MS student, specializes in employing Theory of Change methodology for co
 ::: columns
 ::: {.columns}
 ::: {.column #text}
-*Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lacinia odio vitae vestibulum vestibulum. Cras vehicula, mi eget laoreet varius, libero justo cursus odio, nec dictum libero justo sit amet elit. Integer nec odio nec nisi cursus tincidunt. Sed ac felis ac nulla fermentum tincidunt. Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Nulla porttitor accumsan tincidunt.*
+Kayla Hodges is investigating how women rangers in Asia and Latin America impact ranger-community relationships and conservation outcomes.
 
 <br><center>
-[{{< fa solid id-card size=LARGE >}}](https://acaptainslog.com/)
-&nbsp;&nbsp;&nbsp;&nbsp;
-[{{< fa brands linkedin size=LARGE >}}](https://www.linkedin.com/in/kaptainkayla/)
+[{{< fa brands linkedin size=LARGE >}}](http://www.linkedin.com/in/kghodges)
 </center>
 :::
 ::: {.column #img-right}
-<center><img src="/assets/images/2024_kayla-hodges_headshot.jpg" width="90%" class="team-img" />
+<center><img src="/assets/images/2024_kayla-hodges_headshot.png" width="90%" class="team-img" />
 </center>
 :::
 :::
@@ -295,22 +213,40 @@ Zoe Sidana Bunnath graduated from the Royal University of Phnom Penh with a Bach
 ### Research Assistants
 :::
 
-#### Kate Crowell <br>
+#### Elanur Ural <br>
+
+::: columns
+::: {.columns}
+::: {.column #img}
+<center><img src="/assets/images/2023_ela-ural_headshot.png" width="90%" class="team-img" /></center>
+:::
+::: {.column #text}
+Ela is a PhD student out of the Department of Economics at University of Hawai'i at Mānoa. Her research primarily focuses on agriculture and natural resources, with particular interest in the role of social institutions. She works under the Oleson Lab's coastal ecosystem accounting team on the valuation of fisheries for the main Hawaiian islands.
+
+<br><center>
+[{{< fa brands linkedin size=LARGE >}}](https://www.linkedin.com/in/elanur-ural/) 
+</center>
+:::
+:::
+:::
+
+<div class="divider"></div>
+
+#### Sydney Campbell <br>
 
 ::: columns
 ::: {.columns}
 ::: {.column #img}
 <center>
-<img src="/assets/images/2023_kate-crowell_headshot.png" width="90%" class="team-img" />
+<img src="/assets/images/2024_sydney-campbell_headshot.jpg" width="90%" class="team-img" />
 </center>
 :::
-::: {.column #text}
 
-Kate is a research assistant in the Oleson Ecological Economics Lab, working on starting a Donut Economics Action Lab, in addition to continuing collaborative research on the Genuine Progress Indicator with the state.
-She joined the lab in Spring 2021, where she started as an undergraduate research assistant. Kate recently graduated from the University of Hawaiʻi at Mānoa with a B.S. in Natural Resources and Environmental Management (NREM) and B.A. in Political Science, and is expanding on her previous research in the lab post-grad.
+::: {.column #text}
+*Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lacinia odio vitae vestibulum vestibulum. Cras vehicula, mi eget laoreet varius, libero justo cursus odio, nec dictum libero justo sit amet elit. Integer nec odio nec nisi cursus tincidunt. Sed ac felis ac nulla fermentum tincidunt. Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Nulla porttitor accumsan tincidunt.*
 
 <br><center>
-[{{< fa brands linkedin size=LARGE >}}](https://www.linkedin.com/in/kate-crowell-2634ba144/)
+[{{< fa brands linkedin size=LARGE >}}](https://www.linkedin.com/in/sydney-campbell-b4428419b/)
 </center>
 :::
 :::
@@ -324,7 +260,7 @@ She joined the lab in Spring 2021, where she started as an undergraduate researc
 ::: {.columns}
 ::: {.column #text}
 
-*Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lacinia odio vitae vestibulum vestibulum. Cras vehicula, mi eget laoreet varius, libero justo cursus odio, nec dictum libero justo sit amet elit. Integer nec odio nec nisi cursus tincidunt. Sed ac felis ac nulla fermentum tincidunt. Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Nulla porttitor accumsan tincidunt.*
+Whitney has an MS in fisheries ecology, is a National Geographic Explorer and works at Pristine Seas. She occasionally supports the lab in spatial data analysis.
 
 <br><center>
 [{{< fa brands linkedin size=LARGE >}}](https://www.linkedin.com/in/whitney-goodell-26abb62a2/)
@@ -391,11 +327,9 @@ She now works for the government of West Australia.
 
 #### Mia Comeros (2022-2024)
 
-*Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lacinia odio vitae vestibulum vestibulum. Cras vehicula, mi eget laoreet varius, libero justo cursus odio, nec dictum libero justo sit amet elit. Integer nec odio nec nisi cursus tincidunt.*
-
 #### Anders Dugstad (2023-2024)
 
-*Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lacinia odio vitae vestibulum vestibulum. Cras vehicula, mi eget laoreet varius, libero justo cursus odio, nec dictum libero justo sit amet elit. Integer nec odio nec nisi cursus tincidunt.*
+#### Ashley Lowe MacKenzie (2022-2023)
 
 ::: {.highlights}
 ### PhD Students
@@ -412,7 +346,7 @@ Jutha was a Royal Thai scholar who investigated conflict resolution in Thai mari
 
 #### Alohi Nakachi (2018-2024)
 
-*Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lacinia odio vitae vestibulum vestibulum. Cras vehicula, mi eget laoreet varius, libero justo cursus odio, nec dictum libero justo sit amet elit. Integer nec odio nec nisi cursus tincidunt.*
+#### Lansing Perng (2018-2024)
 
 ### Master's of Science Students
 
@@ -444,10 +378,6 @@ She now works at the Division of Aquatic Resources.
 #### Rachael Cleveland (2022)
 
 Rachael focused on applying principles from Structured Decision Making to community-scale fire management in Hawai'i.
-
-#### Lysbeth Koster (2023-2024)
-
-Lysbeth's MSc thesis project focused on the biogoechemical dynamics that influence aquaculture productivity of Hawaiian fishpond, and how future management can incorporate the impact of climate change.
 
 ::: {.highlights}
 ### Master's of Environmental Management Students
@@ -484,14 +414,40 @@ Kate went on to be a Grau Fellow with the University of Hawaiʻi Sea Grant Colle
 Courtney helped create programs for invasive algae removal and monitoring in Paiko Lagoon State Wildlife Sanctuary for Division of Forestry and Wildlife.
 She got a job post-graduation with Kahoʻolawe Island Restoration Council as a coastal specialist.
 
+#### Melissa Kunz ()
+
+::: {.highlights}
+### Visiting Scholars/Interns
+:::
+
+#### Lysbeth Koster (2023-2024)
+
+Lysbeth's MSc thesis project focused on the biogoechemical dynamics that influence aquaculture productivity of Hawaiian fishpond, and how future management can incorporate the impact of climate change.
+
+#### Marion Graftieaux (2024)
+
 ::: {.highlights}
 ### Undergraduate Students
 :::
 
+#### Cecile LeViol (2016)
+
+Cecile visited from France for 6 months, working on modeling land-sea connections and the decision science of land management.
+
 #### Lukanicole Zavas (2017)
 
-Luka conducted independent research with the Oleson lab on the state's Genuine Progress Indicator, winning a university-wide award.
-After graduation, she got a job in restoration in Waimea Valley, Oʻahu, and continued as a graduate student in NREM in the wildlife ecology lab.
+Luka conducted independent research with the Oleson lab on the state's Genuine Progress Indicator, winning a university-wide award. After graduation, she got a job in restoration in Waimea Valley, Oʻahu, and continued as a graduate student in NREM in the wildlife ecology lab.
+
+#### Marine Barizien (2018)
+
+Marine visited from her university in France to work on the water accounts project.
+She is now working on heavy metals management in French Guyana as a staff member of the government of France.
+
+#### Anne-Charlotte Olivier (2019)
+
+Anne-Charlotte picked up from Marine's work, building water accounts for the islands of Oahu and Maui. Anne-Charlotte now works as a project coordinator with the Green Municipal Fund at The Federation of Canadian Municipalities.
+
+#### Kate Crowell (2024)
 
 ::: {.highlights}
 ### Research Assistants
@@ -507,20 +463,6 @@ Michele is now Senior Research Fellow at ARC Centre of Excellence for Coral Reef
 
 Kim was an RA in the Oleson lab investigating how land-based erosion processes are connected to inputs of sediments and sediment-bound nutrients in the coastal environment.
 Kim started working at TNC in Honolulu after graduation.
-
-#### Cecile LeViol (2016)
-
-Cecile visited from France for 6 months, working on modeling land-sea connections and the decision science of land management.
-
-#### Marine Barizien (2018)
-
-Marine visited from her university in France to work on the water accounts project.
-She is now working on heavy metals management in French Guyana as a staff member of the government of France.
-
-#### Anne-Charlotte Olivier (2019)
-
-Anne-Charlotte picked up from Marine's work, building water accounts for the islands of Oahu and Maui.
-Anne-Charlotte now works as a project coordinator with the Green Municipal Fund at The Federation of Canadian Municipalities
 
 #### Derek Ford (2018-2019, 2021)
 
